fix images not showing up in markdown

--- a/src/components/utilities/_base.scss
+++ b/src/components/utilities/_base.scss
@@ -34,6 +34,9 @@ p {
 .is-blue {
     color: $light-blue;
 }
+.is-orange {
+    color: $light-orange;
+}
 
 // Links
 a {
