--- a/src/components/utilities/_variables.scss
+++ b/src/components/utilities/_variables.scss
@@ -13,6 +13,7 @@ $light-green: #7dc485;
 $light-red: #ff7777;
 $light-yellow: #f5cb5c;
 $light-blue: #05668d;
+$light-orange: #ff9f1c;
 
 //Component Sizes
 $headerHeight: 80px;
